--- a/rh-oscap-ds.yml
+++ b/rh-oscap-ds.yml
@@ -19,14 +19,12 @@
     - name: run openscap
       command: oscap xccdf eval \
         --profile {{ oscap_profile }} \
-        --results-arf /tmp/oscap-arf.xml \
-        --report /tmp/oscap-report.html \
+        --results-arf /tmp/{{ oscap_profile }}-oscap-arf.xml \
+        --report /tmp/{{ oscap_profile }}-oscap-report.html \
         --fetch-remote-resources \
         /usr/share/xml/scap/ssg/content/{{ oscap_policy }}.xml
 
-    always:
-    - name: download report
-      fetch:
-        src: /tmp/oscap-report.html
-        dest: ../oscap-reports/{{ inventory_hostname }}.html
-
+  - name: Synchronization using rsync protocol (push)
+      synchronize:
+        src: /tmp/{{ oscap_profile }}*
+        dest: rsync://rh8tower01/datas/logs/ansible-compliance/
