--- a/rh-oscap-ds.yml
+++ b/rh-oscap-ds.yml
@@ -3,7 +3,7 @@
 
   vars:
     oscap_profile: xccdf_org.ssgproject.content_profile_pci-dss
-    oscap_policy: ssg-rhel-dss
+    oscap_policy: ssg-rhel7-ds
 
   tasks:
 
