--- a/rh-syncvlm.yml
+++ b/rh-syncvlm.yml
@@ -18,5 +18,5 @@
   - name: Synchronization using rsync protocol (push)
     synchronize:
       src: /var/log/messages.{{ hostname_instance }}
-      dest: /datas/logs/ansible-compliance/
-    delegate_to: rh8tower01
+      dest: /datas/logs/ansible-compliance/{{ inventory_hostname }}.messages.log
+    delegate_to: {{ inventory_hostname }}
