--- a/rh-collect-svc-facts.yaml
+++ b/rh-collect-svc-facts.yaml
@@ -5,6 +5,5 @@
 
   - name: populate service facts
     service_facts:
-
-  - debug:
-    var: ansible_facts.services
+    
+  - debug: var=ansible_facts.services
